--- a/documentation/antora.yml
+++ b/documentation/antora.yml
@@ -1,5 +1,5 @@
 name: solution-pattern-template
-title: Template Tutorial
+title: Service Interconnect and OpenShift Virtualization
 version: master
 nav:
   - modules/ROOT/nav.adoc
