--- a/site.yml
+++ b/site.yml
@@ -5,6 +5,8 @@ site:
   title: Solution Patterns for Cloud Native Architectures
   url: https://redhat-solution-patterns.github.io/solution-patterns/
   start_page: solution-pattern-template::index.adoc
+  keys:
+    google_analytics: 'G-8TP4HBLBT1' 
 
 content:
   sources:
